--- a/html_advanced/6-index.html
+++ b/html_advanced/6-index.html
@@ -36,11 +36,11 @@
             <article>Article 3</article>
         </section>
 
-            <section>
-                Testimonials section
-            <article>Testimonials 1</article>
-            <article>Testimonials 2</article>
-            <article>Testimonials 3</article>
+        <section>
+            Testimonials section
+            <article>Testimonial 1</article>
+            <article>Testimonial 2</article>
+            <article>Testimonial 3</article>
         </section>
 
             <section>Contact section</section>
