--- a/html_advanced/styleguide.html
+++ b/html_advanced/styleguide.html
@@ -207,6 +207,7 @@
                             <iframe>
                                 src="https://www.youtube.com/embed/41N6bKO-NVI"
                                 title="Holberton School"
+                                frameborder="0"
                                 width="350px"
                                 height="200px">Holberton Sally</iframe>
                         </div>
