--- a/html_advanced/styleguide.html
+++ b/html_advanced/styleguide.html
@@ -209,7 +209,8 @@
                                 title="Holberton School"
                                 frameborder="0"
                                 width="350px"
-                                height="200px">Holberton Sally</iframe>
+                                height="200px">Holberton Sally
+                            </iframe>
                         </div>
                     </section>
 
