--- a/html_advanced/styleguide.html
+++ b/html_advanced/styleguide.html
@@ -199,21 +199,19 @@
                    </section>
 
                    <!-- Iframe -->
-                    <section>
-                        <header>
-                            <h2>Iframe</h2>
-                        </header>
-                        <div>
-                            <iframe>
-                                src="https://www.youtube.com/embed/41N6bKO-NVI"
-                                title="Holberton School"
-                                frameborder="0"
-                                width="350px"
-                                height="200px">Holberton Sally
-                            </iframe>
-                        </div>
-                    </section>
-
+                   <section>
+                    <header>
+                        <h2>Iframe</h2>
+                    </header>
+                    <div>
+                        <iframe 
+                          src="https://www.youtube.com/embed/41N6bKO-NVI"
+                          title="Holberton School"
+                          frameborder="0"
+                          width="350px"
+                          height="200px">Holberton Sally</iframe>
+                    </div>
+                 </section>
 
         </main>
 
